fixed the picture so it stops cutting off when vewing on small devices, removed the header social icons and scroll

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -41,6 +41,7 @@ header {
   bottom: 3rem;
 }
 
+/* PICTURE */
 .me {
   background: var(--color-primary);
   /* 2nd option */
@@ -91,7 +92,7 @@ header {
     height: 100vh;
   }
 
-  /* .header__socials, .scroll__down {
+  .header__socials, .scroll__down {
     display: none;
-  } */
+  }
 }
